[package]
name = "tracing-allocations"
version = "0.1.1-alpha.0"
license = "MIT/Apache-2.0"
edition = "2021"
description = "An instrumented global allocator that emits tracing events upon each allocation and deallocation."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.31"

[dev-dependencies]
tokio = { version = "1.15", features = ["full", "tracing"] }
tracing-subscriber = { version = "0.3.9", features = ["fmt"] }
