[package]
name = "tracing-allocations"
version = "0.1.1-alpha.0"
license = "MIT/Apache-2.0"
edition = "2021"
description = "An instrumented global allocator that emits tracing events upon each allocation and deallocation."

[[bench]]
harness = false
name = "benches"

[dependencies]
tracing = "0.1.31"

[patch.crates-io]
tracing = { git = "https://github.com/tokio-rs/tracing.git", branch = "eliza/fix-register-deadlock" }
tracing-core = { git = "https://github.com/tokio-rs/tracing.git", branch = "eliza/fix-register-deadlock" }

[dev-dependencies]
tokio = { version = "1.15", features = ["full", "tracing"] }
tracing-subscriber = { version = "0.3.9", features = ["env-filter", "fmt"] }
criterion = { version = "0.3.5", default-features = false, features = ["cargo_bench_support", "html_reports"] }
